force-app/main/default/objects/GFH_Sprint__c/GFH_Sprint__c.object-meta.xml
<CustomObject>
    <label>Sprint</label>
    <pluralLabel>Sprints</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>