force-app/main/default/objects/GFH_Sprint__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <label>ExternalKey</label>
    <type>Text</type>
    <length>80</length>
    <externalId>true</externalId>
</CustomField>