force-app/main/default/objects/GFH_Sprint__c/fields/LearningMetric_01__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_01__c</fullName>
    <label>LearningMetric 01</label>
    <type>Text</type>
    <length>255</length>
</CustomField>