force-app/main/default/objects/GFH_Sprint__c/fields/LearningMetric_04__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_04__c</fullName>
    <label>Learning Metric 04</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>