force-app/main/default/objects/GFH_Sprint__c/fields/LearningMetric_06__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_06__c</fullName>
    <label>Learning Metric 06</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>