force-app/main/default/objects/GFH_Sprint__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Lookup</type>
    <referenceTo>GFH_Project__c</referenceTo>
    <relationshipName>Sprints</relationshipName>
    <relationshipLabel>Sprints</relationshipLabel>
</CustomField>