force-app/main/default/objects/GFH_Sprint__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
            <fullName>Draft</fullName>
        </value>
        <value>
            <fullName>Active</fullName>
        </value>
        <value>
            <fullName>On Hold</fullName>
        </value>
        <value>
            <fullName>Completed</fullName>
        </value>
        <value>
            <fullName>Cancelled</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
</CustomField>